## Process this file with automake to produce Makefile.in


resdir= $(pkgdatadir)

nobase_res_DATA=apk/app-debug.apk \
	css/my-android.css \
	css/application-view.css \
	android.jpeg \
	icon/app-default-icon.png \
	icon/application-view-title.svg \
	icon/connect-success.png \
	icon/connect-fail.png \
	icon/my-android-title.svg
