## Process this file with automake to produce Makefile.in


noinst_LIBRARIES =  \
	libcutils.a

libcutils_a_SOURCES =  \
	sockets.h \
	socket_network_client.c \
	socket_loopback_server.c \
	socket_loopback_client.c \
	socket_local_server.c \
	socket_local_client.c \
	socket_local.h \
	socket_inaddr_any_server.c \
	load_file.c \
	list.h \
	list.c \
	abort_socket.h \
	abort_socket.c
