## Process this file with automake to produce Makefile.in


noinst_LIBRARIES =  \
					libcutils.a

libcutils_a_SOURCES = \
		abort_socket.c \
		misc.h \
		socket_local_server.c \
		abort_socket.h \
		properties.h \
		socket_loopback_client.c \
		list.c \
		socket_inaddr_any_server.c \
		socket_loopback_server.c \
		list.h \
		socket_local_client.c \
		socket_network_client.c \
		load_file.c \
		socket_local.h \
		sockets.h

